--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TaskMVC">
-        <activity
-            android:name=".View.AddTaskActivity"
-            android:exported="false" />
+        android:theme="@style/Theme.TaskMVP">
         <activity
             android:name=".View.MainActivity"
             android:exported="true">
@@ -23,13 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713" />
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+        <activity
+            android:name=".View.AddTaskActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
